# django-tenantkit

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
django-multitenant-mix/: manage.py  pyproject.toml
django-multitenant-mix/django_multitenant_mix/: asgi.py  settings.py  wsgi.py
django-multitenant-mix/multitenant/: __init__.py  admin_site.py  bootstrap.py  crypto.py  errors.py  serializers.py  tests.py  tests_integration.py  views.py
django-multitenant-mix/multitenant/backends/postgresql/: base.py
django-multitenant-mix/multitenant/core/: context.py
django-multitenant-mix/multitenant/management/: __init__.py
django-multitenant-mix/multitenant/management/commands/: __init__.py  list_tenant_models.py  tenant_makemigrations.py  tenant_migrate.py
django-multitenant-mix/multitenant/middleware/: __init__.py
django-multitenant-mix/multitenant/migrations/: 0004_tenant_provisioning_mode.py  0005_tenant_provisioning_connection_string.py
django-multitenant-mix/multitenant/routers/: tenant.py
django-multitenant-mix/multitenant/strategies/database/: strategy.py
django-multitenant-mix/multitenant/templates/admin/: base_site.html  multitenant_tenant_delete_confirmation.html  multitenant_tenant_operation.html  soft_delete_hard_delete_confirmation.html  tenant_switch.html
docs/: MODEL_CONFIG_IMPLEMENTATION.md  api.md  architecture.md  auth-and-admin.md  commands.md  concepts.md  configuration-guide.md  example.md  glossary.md  installation.md  migration-guide-v0.x-to-v1.md  model_config_example.py  provisioning.md  quickstart.md  rfc-v0.md  roadmap.md  session-notes.md  setup-standard.md  study-guide.md  technical-admin-login-fix.md  testing.md
docs/adr/: 0001-no-domain-resolution.md  0002-single-admin-site-with-tenant-context.md  0003-hybrid-isolation-fixed-at-creation.md  0004-global-superuser-and-local-tenant-users.md  0005-auth-agnostic.md  0006-app-model-classification.md
docs/api-collection/: README.md  bruno.json
docs/api-collection/environments/: local.bru
docs/api-collection/operations/: migrate-only.bru  provision-and-migrate.bru  provision-only.bru
docs/api-collection/tenants/: create-tenant.bru  delete-tenant.bru  get-tenant.bru  list-tenants.bru  update-tenant.bru
example/: README.md  main.py
example/config/: asgi.py  settings.py  urls.py  wsgi.py
example/multitenant/: admin.py  api.py  tests_admin_base.py
example/multitenant/migrations/: 0001_initial.py  0002_tenant_connection_alias.py  0003_tenant_connection_string.py  0006_alter_tenant_connection_alias.py
example/multitenant/static/multitenant/admin/: tenant_form.js
handoff/: admin-login-fix-summary.txt  admin-login-fix-summary.yaml
project/: README.md  main.py  pyproject.toml
project/config/: asgi.py  urls.py  wsgi.py
project/django_multitenant_mix/: urls.py
project/multitenant/: __init__.py  model_config.py
project/multitenant/middleware/: tenant.py
scripts/: postgres.sh
src/multitenant/: __init__.py  admin.py  admin_base.py  apps.py  connections.py  managers.py  models.py  provisioning.py  tests.py  tests_integration.py
src/multitenant/management/commands/: list_tenant_models.py  tenant_makemigrations.py  tenant_migrate.py
src/multitenant/routers/: __init__.py  tenant.py
src/multitenant/strategies/schema/: strategy.py
src/multitenant/templates/admin/: multitenant_tenant_bulk_delete.html  multitenant_tenant_change_form.html
src/tenantkit/: __init__.py  admin.py  admin_base.py  admin_site.py  api.py  apps.py  auth.py  bootstrap.py  checks.py  classification.py  connections.py  crypto.py  managers.py  model_config.py  models.py  provisioning.py  serializers.py  tests.py  tests_admin_base.py  tests_integration.py  views.py
src/tenantkit/backends/postgresql/: base.py
src/tenantkit/core/: strategy.py
src/tenantkit/management/: __init__.py
src/tenantkit/management/commands/: __init__.py  check_tenantkit_config.py  list_tenant_models.py  tenant_makemigrations.py  tenant_migrate.py
src/tenantkit/middleware/: __init__.py  tenant.py
src/tenantkit/migrations/: 0001_initial.py  0002_remove_audit_fields_from_shared_models.py  0003_remove_tenantmembership_change_accepted_by.py  0004_tenant_created_by_tenant_deleted_by_and_more.py
src/tenantkit/routers/: tenant.py
src/tenantkit/strategies/database/: strategy.py
src/tenantkit/strategies/schema/: strategy.py
src/tenantkit/templates/admin/: base_site.html  tenantkit_bootstrap_admin.html  tenantkit_tenant_change_form.html  tenantkit_tenant_operation.html
src/tenantkit/templates/tenantkit/admin/: login.html
