[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-tenantkit-core"
version = "0.2.0"
description = "A comprehensive Django multi-tenancy solution with schema isolation, tenant-aware middleware, and flexible routing"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    {name = "Pablo Digonzelli", email = "pdigonzelli@gmail.com"}
]
keywords = ["django", "tenantkit", "tenant", "multitenancy", "multi-tenant", "saas", "postgresql", "schema"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "django>=6.0.3",
    "django-auditkit",
    "django-extensions>=4.1",
    "djangorestframework>=3.17.0",
    "drf-spectacular>=0.29.0",
    "psycopg[binary,pool]>=3.3.3",
]

[tool.uv.sources]
django-auditkit = { path = "/home/pdigonzelli/proyectos/django-auditkit", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-django>=4.5.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "basedpyright>=1.29.0",
    "coverage>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/pdigonzelli/django-tenantkit"
Documentation = "https://github.com/pdigonzelli/django-tenantkit#readme"
Repository = "https://github.com/pdigonzelli/django-tenantkit"
Issues = "https://github.com/pdigonzelli/django-tenantkit/issues"
Changelog = "https://github.com/pdigonzelli/django-tenantkit/blob/main/CHANGELOG.md"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["tenantkit", "tenantkit.*"]

[tool.setuptools.package-data]
tenantkit = [
    "templates/**/*.html",
    "static/**/*.js",
]

[tool.basedpyright]
typeCheckingMode = "standard"
useLibraryCodeForTypes = true
autoImportCompletions = true
indexing = true
exclude = [
    "**/__pycache__",
    "**/.venv",
    "**/build",
    "**/dist",
    "**/node_modules",
    "**/postgres-data",
    "**/tenant_dbs",
    "**/*.egg-info",
]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"
src = ["src", "example"]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "node_modules",
    "postgres-data",
    "tenant_dbs",
    "*.egg-info",
    "src/tenantkit/migrations",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "DJ"]
ignore = ["E501"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"tests/**/*.py" = ["S101"]
"src/tenantkit/tests*.py" = ["S101"]
"example/**/*.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py", "tests_*.py", "tests_integration.py", "tests_admin_base.py"]
testpaths = ["src/tenantkit"]
